crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_create_node_chain.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
WriteOps:
  CreateNode (:Person AS $0) props={name: "Alice"}
  CreateNode (:Person AS $1) props={name: "Bob"}
