crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_distinct_return.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Distinct
  Project [$0.city AS city]
    Source (:Person AS $0)
