crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_expand_multi_rel_type.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n, $2 AS m]
  Expand ($0)-[:KNOWS|FOLLOWS(->) $1]->( AS $2)
    Source (AS $0)
